# rc_car

./: .gitignore
atmega/: Makefile  atmega.sh  atmega_debug.sh  communicate.py  main.c  master.c  slave.c
motor_control/: Makefile  atmega.sh  atmega_debug.sh  communicate.py  main.c
raspberry/: CMakeLists.txt  main.cpp
raspberry/camera/: CMakeLists.txt  camera.c
raspberry/camera/include/: Camera.h  CameraHandler.h  camera.h
raspberry/camera/script/: camera_client.py  camera_server.py
raspberry/camera/src/: Camera.cpp  CameraHandler.cpp  camera.cpp
raspberry/client/: CMakeLists.txt  client.cpp  main.cpp
raspberry/client/camera/: CMakeLists.txt
raspberry/client/camera/include/: Camera.h  CameraHandler.h  Image.h  ImageJPEG.h  ImageRGB.h
raspberry/client/camera/script/: camera_client.py
raspberry/client/camera/src/: Camera.cpp  CameraHandler.cpp  Image.cpp  ImageJPEG.cpp  ImageRGB.cpp  camera.cpp
raspberry/client/client/include/: ClientHandler.h
raspberry/client/client/src/: CameraClient.cpp  ClientHandler.cpp  GamePadClient.cpp
raspberry/client/control/: CMakeLists.txt
raspberry/client/control/include/: Atmega.h  Control.h  ControlHandler.h  Usart.h  control.h  gpio.h  spi.h
raspberry/client/control/src/: Atmega.cpp  Control.cpp  ControlHandler.cpp  Gpio.cpp  Usart.cpp  control.cpp  gpio.cpp  spi.cpp  usart.cpp
raspberry/client/extern_control/: CMakeLists.txt
raspberry/client/extern_control/include/: Control.h  ControlHandler.h  ControlInstance.h  GpioHandler.h  I2cHandler.h
raspberry/client/extern_control/src/: Control.cpp  ControlHandler.cpp  ControlInstance.cpp  I2cHandler.cpp
raspberry/client/game_pad_client/: CMakeLists.txt
raspberry/client/game_pad_client/include/: CameraClient.h  ClientHandler.h  GamePadClient.h  GamePadInstance.h
raspberry/client/game_pad_client/src/: ClientHandler.cpp  GamePadClient.cpp
raspberry/client/include/: CameraClient.h  ClientHandler.h  GamePadClient.h  GamePadInstance.h
raspberry/client/raspberry/include/: Gpio.h
raspberry/client/raspberry/src/: Gpio.cpp  I2c.cpp
raspberry/client/shared/: CMakeLists.txt
raspberry/client/shared/include/: Lock.h
raspberry/client/shared/src/: Lock.cpp
raspberry/client/src/: CameraClient.cpp  ClientHandler.cpp  GamePadClient.cpp  GamePadInstance.cpp
raspberry/client/u_controller/: CMakeLists.txt
raspberry/client/u_controller/atmega/include/: Atmega.h
raspberry/client/u_controller/atmega/src/: Atmega.cpp
raspberry/client/u_controller/shared/include/: Communication.h  Gpio.h  Spi.h  UController.h
raspberry/client/u_controller/shared/src/: Communication.cpp  Gpio.cpp  I2c.cpp  UController.cpp
raspberry/client/u_controller/src/: UController.cpp
raspberry/client/u_controller_control/: CMakeLists.txt
raspberry/client/u_controller_control/include/: Control.h  ControlHandler.h
raspberry/client/u_controller_control/src/: Control.cpp  ControlHandler.cpp
raspberry/control/: CMakeLists.txt
raspberry/control/include/: AtmegaI2cHandler.h  ControlHandler.h  I2cHandler.h  I2cRegisterData.h  atmega.h  communication.h  config.h  i2c.h  usart.h
raspberry/control/src/: AtmegaI2cHandler.cpp  ControlHandler.cpp  I2cHandler.cpp  I2cRegisterData.cpp  atmega.cpp  communication.cpp  control_node.cpp  i2c.cpp
raspberry/extern_control/include/: ControlHandler.h
raspberry/extern_control/src/: GpioHandler.cpp  I2cHandler.cpp
raspberry/raspberry/: CMakeLists.txt
raspberry/raspberry/include/: I2c.h
raspberry/raspberry/src/: Communication.cpp  Gpio.cpp  I2c.cpp  Spi.cpp
raspberry/server/: CMakeLists.txt  main.cpp  server.cpp
raspberry/server/graphics/: CMakeLists.txt
raspberry/server/graphics/include/: Graphics.h  MainWindow.h  MainWindow.ui  StatusDisplay.h  VideoDisplay.h
raspberry/server/graphics/src/: Graphics.cpp  MainWindow.cpp  MainWindow.ui  StatusDisplay.cpp
raspberry/server/include/: Server.h  XboxController.h  XboxControllerService.h  config.h
raspberry/server/instances/: CMakeLists.txt
raspberry/server/instances/include/: GamePadInstance.h  TransceivedDataInstance.h
raspberry/server/instances/src/: GamePadInstance.cpp
raspberry/server/server/: CMakeLists.txt
raspberry/server/server/include/: CameraService.h  ImageInstance.h  ServerHandler.h  XboxControllerService.h
raspberry/server/server/src/: CameraService.cpp  ImageInstance.cpp  ServerHandler.cpp  XboxControllerService.cpp
raspberry/server/src/: Server.cpp  ServerHandler.cpp  XboxController.cpp
raspberry/server/xbox/include/: XboxController.h
raspberry/server/xbox/src/: XboxController.cpp
raspberry/shared/: CMakeLists.txt  client_config.h  debug.h
raspberry/shared/GamePad/include/: GamePad.h
raspberry/shared/GamePad/src/: GamePad.cpp
raspberry/shared/Image/include/: ImageJPEG.h
raspberry/shared/Image/src/: Image.cpp
raspberry/shared/Lock/include/: Cond.h  Lock.h
raspberry/shared/Lock/src/: Cond.cpp  Lock.cpp
raspberry/shared/Socket/include/: Socket.h
raspberry/shared/Thread/include/: ThreadHandler.h  WorkingThread.h
raspberry/shared/Thread/src/: ThreadHandler.cpp  WorkingThread.cpp
raspberry/shared/include/: GamePad.h  Image.h  ImageJPEG.h  ImageRGB.h  Socket.h  WorkingThread.h  config.h  debug.h
raspberry/shared/src/: Cond.cpp  GamePad.cpp  Image.cpp  ImageJPEG.cpp  ImageRGB.cpp  Lock.cpp  Socket.cpp  WorkingThread.cpp
raspberry/xbox_controller/: CMakeLists.txt
raspberry/xbox_controller/include/: xbox_controller.h
raspberry/xbox_controller/script/: xbox_controller_client.py  xbox_controller_server.py
raspberry/xbox_controller/src/: xbox_controller.cpp
rotation_encoder/: Makefile  attiny.sh  communicate.py  main.c  main.cpp
server/graphics/: CMakeLists.txt
server/graphics/include/: Graphics.h  MainWindow.h  StatusDisplay.h  VideoDisplay.h
server/graphics/src/: Graphics.cpp  MainWindow.cpp  MainWindow.ui  StatusDisplay.cpp  VideoDisplay.cpp
server/server/: CMakeLists.txt
server/server/include/: CameraService.h  ServerHandler.h  XboxControllerService.h
server/server/src/: ServerHandler.cpp  XboxControllerService.cpp
(+90 files in other folders)
