add_library( 
  control
  SHARED
  src/ControlHandler.cpp
)
add_dependencies(
  control
  u_controller
  usart
  spi
  i2c
  communication
)
add_library(
  gpio_handler
  SHARED
  src/GpioHandler.cpp
)
add_library(
  i2c_handler
  SHARED
  src/I2cHandler.cpp
)
add_library(
  atmega_i2c_handler
  SHARED
  src/AtmegaI2cHandler.cpp
)
add_dependencies(
  atmega_i2c_handler
  i2c_handler
)
add_library(
  i2c_register_data
  SHARED
  src/I2cRegisterData.cpp
)
add_dependencies(
  i2c_register_data
  atmega_i2c_handler
)

