add_library(
  image
  SHARED
  src/Image.cpp
)
add_library(
  image_rgb
  SHARED
  src/ImageRGB.cpp
)
add_dependencies(
  image_rgb
  image
)
add_library(
  image_jpeg
  SHARED
  src/ImageJPEG.cpp
)
add_dependencies(
  image_jpeg
  image
)
add_library( 
  camera
  SHARED
  src/Camera.cpp
)
add_dependencies(
  camera
  working_thread
  image
)
