add_library( 
  server_handler
  SHARED
  src/ServerHandler.cpp
)
add_dependencies(
  server_handler
  socket
  working_thread
)
add_library(
  xc_service
  SHARED
  src/XboxControllerService.cpp
)
add_library(
  camera_service
  SHARED
  src/CameraService.cpp
)
add_dependencies(
  camera_service
  image
)
add_library(
  image_instance
  SHARED
  src/ImageInstance.cpp
)
add_dependencies(
  image_instance
  image
)